@@ -70,7 +70,6 @@ bzfs \- BZFlag game server
 [\fB\-replay\fR]
 [\fB\-reportfile \fIfilename\fR]
 [\fB\-reportpipe \fIcommand\fR]
-[\fB\-requireidentify\fR]
 [\fB\-requireudp\fR]
 [\fB\+s \fIflag-count\fR]
 [\fB\-s \fIflag-count\fR]
@@ -378,9 +377,6 @@ this file. If neither \fB-reportfile\fR or \fB-reportpipe\fR is used the
 .B -reportpipe \fIcommand\fR
 Pipe messages to the server admin written using the \fB/report\fR command to
 this program or shell command. See \fB-reportfile\fR.
-.TP
-.B -requireidentify
-Require clients register and identify before they can spawn.
 .TP
 .B -requireudp
 Require clients to use parallel UDP. If players fire before opening a
@@ -933,7 +929,7 @@ VOTE	/vote
 .br
 VETO	/veto
 .br
-REQUIREIDENTIFY	user must /identify when using this callsign
+REQUIREIDENTIFY	user must /identify when using this locally registered callsign
 .br
 PRIVATEMESSAGE	/msg
 .br
